--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "start": "node build/index.js",
     "dev": "ts-node-dev src/index.ts",
     "tsc": "tsc",
     "test": "jest",
-    "seed": "ts-node-dev src/lib/seed.ts"
+    "seed": "ts-node-dev src/lib/seed.ts",
+    "studio": "npx prisma studio"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +25,7 @@
     "@types/swagger-ui-express": "^4.1.7",
     "jest": "^29.7.0",
     "prisma": "^6.3.0",
+    "puppeteer": "^24.1.1",
     "supertest": "^7.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
@@ -32,7 +35,6 @@
   },
   "dependencies": {
     "express": "4.21.2",
-    "node-cron": "^3.0.3",
-    "puppeteer": "^24.1.1"
+    "node-cron": "^3.0.3"
   }
 }
