--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "migrate": "npx prisma migrate dev",
     "build": "tsc",
 
-    "start": "node build/index.js",
+    "start": "pnpm prisma migrate deploy && node build/index.js",
     "dev": "ts-node-dev src/index.ts",
     
     "tsc": "tsc",
